# claude-token-management

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml
.claude/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  token_drain_regression.yml
.github/workflows/: certify.yml
config/: budgets.json  cost-config.json  pricing-cache.json  routing-policy.json  settings-snapshot.json  settings.json  settings.local.json  team-budget-policies.json  team-preset-profiles.json  token-guard-config.json
data/: compatibility-registry.json  cost-cache-snapshot.json  ops-snapshot.json  ops-trends-7d-snapshot.json  statusline-snapshot.json  usage-index-snapshot.json
data/alerts/: alert-state.json  alerts.jsonl  proxy-usage.jsonl
data/sessions/: 2026-02-26.jsonl  2026-02-27.jsonl  2026-02-28.jsonl  2026-03-01.jsonl  2026-03-02.jsonl  2026-03-03.jsonl  2026-03-04.jsonl  2026-03-05.jsonl  2026-03-06.jsonl  2026-03-07.jsonl  2026-03-08.jsonl
data/weekly/: 2026-W05.json  2026-W06.json  2026-W07.json  2026-W08.json  2026-W09.json
docs/: COMPATIBILITY_MATRIX.md  RELEASE_PROCESS.md  TOKEN_MANAGEMENT_MIGRATION_GUIDE.md  TOKEN_MANAGEMENT_OPERATOR_PLAYBOOK.md
docs/adrs/: adr-001-file-backed-state.md  adr-002-fail-open-enforcement.md  adr-003-prevention-at-hook-boundaries.md
docs/analysis/: component-grades.md  evolution-timeline.md  gaps.md  production-readiness.md  regression-results.md  strengths.md  weaknesses.md
docs/architecture/: data-flow.md  hook-lifecycle.md  source-inventory.md  (+1 more)
tests/: run_token_system_regression.py  test_cli_compatibility.py  test_compatibility_registry.py  test_cost_layer_contract.py  test_drain_bench.py  test_resume_compat_guard.py  test_runtime_overrides.py  test_session_start_compatibility.py  test_token_guard_behavior.py  validate_schemas.py
(+177 files in other folders)
